<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivProfilePic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/blank_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnUploadImage"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_background"
                android:text="@string/upload_image"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivProfilePic" />

            <TextView
                android:id="@+id/tvProfileFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/full_name"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivProfilePic"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvProfileGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/gender"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/ivProfilePic"
                app:layout_constraintTop_toBottomOf="@id/tvProfileFullName" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutInfo">

            <EditText
                android:id="@+id/etProfileFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/login_edit_background"
                android:hint="@string/full_name"
                android:maxLines="1"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorGrey" />

            <EditText
                android:id="@+id/etProfileEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/login_edit_background"
                android:hint="@string/email_phone"
                android:maxLines="1"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorGrey" />

            <EditText
                android:id="@+id/etProfilePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/login_edit_background"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorGrey" />

            <TextView
                android:id="@+id/tvPasswordSecurityLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:importantForAutofill="no"
                android:maxLines="1"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorGrey"
                android:textSize="14sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/etProfileVerifyCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/login_edit_background"
                android:hint="@string/verify_code"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLines="1"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorGrey" />

            <RadioGroup
                android:id="@+id/genderRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:elevation="3dp"
                android:orientation="horizontal"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

            </RadioGroup>

            <CheckBox
                android:id="@+id/agreementCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agreement"/>

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background"
                android:text="@string/update"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
